    succeeded and the server answered with an empty response when using
    encrypted ipc communication 
  * Fixed a bug where the browser would not redirect to the webserver when the
    chosen port was to high
  * Fixed a sementation fault if the config tmp file did not contain the
    account shortname
  * Fixed broken bash-completion when oidcdir did not yet exist 

  [ Gabriel Zachmann ]
  * Fixed build error if bin dir not existed
  * Fixed a problem with unity OP where access token did not have any scope
  * Fixed strange additional parameters in the auth code exchange request 
  * Fixed superfluous error logs when checking if a string is a json object
  * Changed encoding for memory encryption from hex to base64 

  [ Gabriel Zachmann ]
  * Fixed a bug due to which oidc-agent would return a wrong already loaded
    account config when generating a new account config
  * Improved error handling when no authorization flow possible
  * Fixed a seg fault when dynamic client registration failed
  * Fixed a seg fault in memory decryption if account config does not have a
    client secret (public client)
  * Added support for PKCE
  * Added support for public clients
  * Fixed a bug where it was possible to display issuer urls that only differ
    in the trayling slash twice when using oidc-gen
  * Enforce usage of openid and offline_access scope in all cases

  [ Gabriel Zachmann ]
  * Improve error message when necessary scopes cannot be registered during
    dynamic client registration
  * If necessary scopes cannot be registered during dynamic client
    registration, a public client is tried
  * Fixed memory leaks
  * Allow updating of public clients by using the -m and --pub option

  [ Gabriel Zachmann ]
  * Added public client for aai.egi.eu

  [ Gabriel Zachmann ]
  * Added environment variable to manually specify the oidc-agent config
    directory location

 -- Marcus Hardt <hardt@kit.edu>  Mon, 11 Feb 2019 09:58:21 +0100