@@ -22,8 +22,9 @@ char* oidc_strcat(const char* str, const char* suf);
 char* oidc_strcopy(const char* str);
 char* oidc_strncopy(const char* str, int len);
 
-char*         getDateString();
-unsigned long strToULong(const char* str);
-int           strToInt(const char* str);
+char*          getDateString();
+unsigned long  strToULong(const char* str);
+int            strToInt(const char* str);
+unsigned short strToUShort(const char* str);
 
 #endif  // STRING_UTILS_H
